// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Should render correctly 1`] = `
<div>
  <a
    class="sc-hLBbgP hCSjEI"
    href="/test"
  >
    <span
      class="sc-eDvSVe iqkXFe"
    />
  </a>
</div>
`;

exports[`<Button /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    class="sc-hLBbgP hCSjEI"
    href="https://duckduckgo.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="sc-eDvSVe iqkXFe"
    />
  </a>
</div>
`;

exports[`<Button /> Should render with nextified href 1`] = `
<div>
  <a
    class="sc-hLBbgP hCSjEI"
    href="/blog/test"
  >
    <span
      class="sc-eDvSVe iqkXFe"
    />
  </a>
</div>
`;
